test/types/range/lydia/badRange-string-lower.good
badRange-string-lower.chpl:1: In function 'main':
badRange-string-lower.chpl:2: error: param for-loops defined using bounds of type 'string..int(64)' are not currently supported
